Fix user avatar not showing in user settings

--- a/src/styles/_modal_common.scss
+++ b/src/styles/_modal_common.scss
@@ -619,6 +619,7 @@
   align-items: center;
   justify-content: center;
   flex-shrink: 0;
+  position: relative;
 
   .attachment-drop-icon {
     font-size: 32px;
@@ -638,17 +639,18 @@
   content: '+';
   display: block;
   text-align: center;
-  border-radius: 50%;
+  border-radius: 0.75rem;
+  font-weight: 700;
   position: absolute;
-  font-weight: 100;
-  font-size: 12pt;
-  margin-top: -75px;
-  margin-left: 40px;
+  top: -4px;
+  right: -4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   line-height: 24px;
 }
 
 .modal-icon-editable {
   cursor: pointer;
+  position: relative;
 
   &:hover {
     opacity: 0.8;
@@ -664,13 +666,10 @@
     text-align: center;
     border-radius: 0.75rem;
     font-weight: 700;
-    float: right;
-    margin-top: 58px;
+    position: absolute;
+    top: 0px;
+    right: 0px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
-    @media (max-width: 768px) {
-      margin-top: 46px;
-    }
   }
 }
 
